--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -50,7 +50,7 @@
 % Set to change date for document, not compile date.
 \date{First edition 15 August 2012\\
 \vspace{6pt}
-Last revised 12 December 2014}
+Last revised 18 January 2015}
 
 % Removing the bibliography title so it shows up in the contents.
 \makeatletter
@@ -1612,10 +1612,11 @@ for (it in 1:3) {
 }
 @
 
-The \code{aveLogCPM} function depends similarly on NB dispersion (see Chapter~\ref{chap:stats}). 
+The \code{aveLogCPM} function depends similarly on NB dispersion (see Chapter~\ref{chap:stats}) for datasets with different library sizes.
 However, dispersion estimation can only proceed after normalization and filtering. 
 This results in another circular dependency that is resolved by using a sensible (but otherwise arbitrary) value for the NB dispersion in \code{aveLogCPM}. 
 The alternative would be to iterate over the entire DB analysis, which would be prohibitively time-consuming in most circumstances.
+Of course, this is not an issue when library sizes are the same.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
